Fix header text overflow  and journey double scrollbar (#1563)
* fix : fixed double scrollbar issue

* style: added text ellipsis for overflown text

* refactor : conditionally rendering header

--- a/workspace/packages/client/src/index.css
+++ b/workspace/packages/client/src/index.css
@@ -257,3 +257,10 @@ html, body, div, span, button, p, button, input {
   z-index: 1000;
   text-wrap: nowrap;
 }
+
+.overflow-ellipsis {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 450px;
+}
